<resources>
    <string name="app_name">Exercicio2</string>
    <string name="name">Nome:</string>
    <string name="sexo">Sexo:</string>
    <string name="feminino">Feminino</string>
    <string name="masculino">Masculino</string>
    <string name="email">Email:</string>
    <string name="telefone">Telefone:</string>
    <string name="preferencia">Preferência:</string>
    <string name="musica">Música</string>
    <string name="cinema">Cinema</string>
    <string name="esporte">Esporte</string>
    <string name="gastronomia">Gastronomia</string>
    <string name="notificacao">Ativar Notificações</string>
    <string name="exibir">Exibir</string>
    <string name="limpar">Limpar</string>
</resources>